// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "async.async.js?ver=a3b4db0bb43a9c87c86e",
    194,
    Object {
      "fullhash": "a3b4db0bb43a9c87c86e",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.super-compressed.js.gz?ver=a3b4db0bb43a9c87c86e",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.super-compressed.js.gz?ver=a3b4db0bb43a9c87c86e",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.js?var=a3b4db0bb43a9c87c86e",
    16204,
    Object {
      "fullhash": "a3b4db0bb43a9c87c86e",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.super-compressed.js.gz?var=a3b4db0bb43a9c87c86e",
      },
      "size": 16204,
    },
  ],
  Array [
    "main.super-compressed.js.gz?var=a3b4db0bb43a9c87c86e",
    4029,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4029,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): warnings 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "assets/js/async.async.js.super-compressed.gz?ver=330ceb18c7a50e9fafac#hash",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "assets/js/async.async.js?ver=330ceb18c7a50e9fafac#hash",
    194,
    Object {
      "fullhash": "330ceb18c7a50e9fafac",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/js/async.async.js.super-compressed.gz?ver=330ceb18c7a50e9fafac#hash",
      },
      "size": 194,
    },
  ],
  Array [
    "assets/js/main.js.super-compressed.gz?var=330ceb18c7a50e9fafac#hash",
    4046,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4046,
    },
  ],
  Array [
    "assets/js/main.js?var=330ceb18c7a50e9fafac#hash",
    16230,
    Object {
      "fullhash": "330ceb18c7a50e9fafac",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/js/main.js.super-compressed.gz?var=330ceb18c7a50e9fafac#hash",
      },
      "size": 16230,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): warnings 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "compression-function-b8ad1ba770111161fc52644f2d5cfb0f": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "compression-function-b8ad1ba770111161fc52644f2d5cfb0f": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "async.async.js.gz?ver=cae37fb4cd09acf59d1c",
    194,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  Array [
    "async.async.js?ver=cae37fb4cd09acf59d1c#hash",
    194,
    Object {
      "fullhash": "cae37fb4cd09acf59d1c",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "compression-function-b8ad1ba770111161fc52644f2d5cfb0f": "async.async.js.gz?ver=cae37fb4cd09acf59d1c",
      },
      "size": 194,
    },
  ],
  Array [
    "main.js.gz?var=cae37fb4cd09acf59d1c",
    16209,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 16209,
    },
  ],
  Array [
    "main.js?var=cae37fb4cd09acf59d1c#hash",
    16209,
    Object {
      "fullhash": "cae37fb4cd09acf59d1c",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "compression-function-b8ad1ba770111161fc52644f2d5cfb0f": "main.js.gz?var=cae37fb4cd09acf59d1c",
      },
      "size": 16209,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): warnings 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz?ver=cae37fb4cd09acf59d1c",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "async.async.js?ver=cae37fb4cd09acf59d1c#hash",
    194,
    Object {
      "fullhash": "cae37fb4cd09acf59d1c",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz?ver=cae37fb4cd09acf59d1c",
      },
      "size": 194,
    },
  ],
  Array [
    "main.js.gz?var=cae37fb4cd09acf59d1c",
    4032,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4032,
    },
  ],
  Array [
    "main.js?var=cae37fb4cd09acf59d1c#hash",
    16209,
    Object {
      "fullhash": "cae37fb4cd09acf59d1c",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz?var=cae37fb4cd09acf59d1c",
      },
      "size": 16209,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}): warnings 1`] = `Array []`;

exports[`"filename" option show work: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "assets/scripts/async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "assets/scripts/async.async.js?ver=81fbfbf8a6522a5c2670#hash",
    194,
    Object {
      "fullhash": "81fbfbf8a6522a5c2670",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/scripts/async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "assets/scripts/main.js.gz",
    4048,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4048,
    },
  ],
  Array [
    "assets/scripts/main.js?var=81fbfbf8a6522a5c2670#hash",
    16235,
    Object {
      "fullhash": "81fbfbf8a6522a5c2670",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/scripts/main.js.gz",
      },
      "size": 16235,
    },
  ],
]
`;

exports[`"filename" option show work: errors 1`] = `Array []`;

exports[`"filename" option show work: warnings 1`] = `Array []`;
